--- a/BenchmarkData/Win11_22H2_Oct2023_10.0.25982.1000.md
+++ b/BenchmarkData/Win11_22H2_Oct2023_10.0.25982.1000.md
@@ -2,7 +2,7 @@ Benchmark numbers after Dev Drive initial release in Win11 22H2 10.0.25982.1000 
 16-core Azure AMD v5 VM.
 
 ExtentsOnly = Files to be copied/cloned were created only by setting the file extents.
-WroteData = Files were also written to.
+WroteData = Files were also written to. ReFS/Dev Drive behaves differently in this case.
 
 BenchmarkDotNet=v0.13.2, OS=Windows 11 (10.0.25982.1000), VM=Hyper-V
 AMD EPYC 7763, 1 CPU, 16 logical and 8 physical cores
