--- a/BenchmarkData/Win11_22H2_Oct2023_10.0.25982.1000.md
+++ b/BenchmarkData/Win11_22H2_Oct2023_10.0.25982.1000.md
@@ -1,4 +1,5 @@
-Benchmark numbers after Dev Drive initial release in Win11 22H2 10.0.25982.1000 (Windows Canary release with early version of CoW-in-Win32).
+Benchmark numbers after Dev Drive initial release in Win11 22H2 10.0.25982.1000, [Windows Canary release with early version of CoW-in-Win32](https://blogs.windows.com/windows-insider/2023/10/25/announcing-windows-11-insider-preview-build-25982-canary-channel/)
+
 16-core Azure AMD v5 VM.
 
 ExtentsOnly = Files to be copied/cloned were created only by setting the file extents.
